# django_cowsay

./: db.sqlite3  manage.py  pyproject.toml  rubric.txt
Cow_Say_App/: admin.py  apps.py  forms.py  models.py  views.py
Cow_Say_App/migrations/: 0001_initial.py  0002_auto_20200818_0310.py  0003_cow_say_what_model_cow_output.py
Cow_Say_Project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html  messages.html
