[tool.poetry]
name = "Cow_Say_Assessment"
version = "1"
description = ""
authors = ["John Wilkinson <johnpwilkinson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
